--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Build and Release
 on:
   push:
     tags:
-      - 'v*'  # Triggers on version tags like v1.0.0
+      - 'v*'          # run on version tags
 
 jobs:
   build-matrix:
@@ -13,51 +13,51 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.11'
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pyinstaller
-        pip install -r requirements.txt || true
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pyinstaller
+          pip install -r requirements.txt || true
 
-    - name: Build executable
-      run: |
-        pyinstaller --noconsole --onefile main.py
-    
-    - name: Make binary executable (macOS/Linux)
-      if: runner.os != 'Windows'
-      run: chmod +x dist/main
+      - name: Build executable
+        run: |
+          pyinstaller --noconsole --name arcady main.py
 
-    - name: Rename binary
-      run: |
-        mkdir -p release
-        cp dist/main* release/arcady-${{ matrix.os }}
+      - name: Package build folder
+        shell: bash            # force Bash even on windows‑latest
+        run: |
+          os_name="${{ matrix.os }}"
+          os_clean="${os_name%-latest}"      # strip suffix in Bash
+          mkdir -p release
+          cp -r dist/arcady* "release/arcady-$os_clean"
+          cd release
+          zip -r "arcady-$os_clean.zip" "arcady-$os_clean"
 
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: arcady-${{ matrix.os }}
-        path: release/*
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: arcady-${{ matrix.os }}
+          path: release/*.zip
 
   release:
     needs: build-matrix
     runs-on: ubuntu-latest
     steps:
-    - name: Download all artifacts
-      uses: actions/download-artifact@v4
-      with:
-        path: artifacts
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: artifacts
 
-    - name: Create GitHub Release
-      uses: softprops/action-gh-release@v1
-      with:
-        files: artifacts/**/*
-
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: artifacts/**/*.zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
